@@ -1,0 +1,28 @@
+<tal:only_rated condition="python:context.can_read and context.rating">
+<div class="Rating EditorRating"
+     i18n:domain="contentratings"
+     tal:define="current context/rating;
+                 star_size view/star_size|python:25;
+                 values view/vocabulary;
+                 count python:len(values);
+                 base_width python:count*star_size;
+                 cat_name python:context.name or '_default'"
+     tal:attributes="class python:'Rating EditorRating' + (star_size &lt;= 15 and ' small-star' or '');
+                     id string:editor-rating-stars-view-${cat_name};">
+  <label>
+    <span class="RatingTitle"
+          tal:content="context/title">Average rating</span>:
+  </label>
+  <ul class="star-rating"
+      tal:attributes="style string:width:${base_width}px;">
+    <li class="current-rating"
+        tal:condition="python:context.can_read"
+        tal:define="width python:((current or 0)/count)*100"
+        tal:attributes="style string:width:${width}%;
+                        title current;"
+        tal:content="current">
+      Currently 3/5 Stars.
+    </li>
+  </ul>
+</div>
+</tal:only_rated>
