@@ -1,0 +1,35 @@
+<div class="Rating"
+     i18n:domain="contentratings"
+     tal:define="star_size view/star_size|python:25;
+                 values view/vocabulary;
+                 count python:len(values);
+                 base_width python:count*star_size;
+                 cat_name python:context.name or '_default'"
+     tal:attributes="class python:'Rating' + (star_size &lt;= 12 and ' small-star' or '') + ' kssattr-category-' + cat_name;
+                     id string:rating-stars-view-${cat_name};">
+
+<div class="AverageRating"
+     tal:condition="context/can_read">
+  <label>
+    <span class="RatingTitle"
+          tal:content="context/title">Average rating</span>
+    <span class="VoteCount"
+          i18n:translate="user_vote_count">
+          (<span tal:omit-tag=""
+                   tal:content="context/numberOfRatings"
+                   i18n:name="count" /> votes)</span>:
+  </label>
+  <div class="star-rating"
+      tal:attributes="style string:width:${base_width}px;">
+    <div class="current-rating"
+        tal:define="width python:(context.averageRating/count)*100"
+        tal:attributes="style string:width:${width}%;"
+        tal:content="context/averageRating">
+      Currently 3/5 Stars.
+    </div>
+  </div>
+  <span class="RatingCount"
+        i18n:translate="vote_count">
+  </span>
+</div>
+</div>
